# docs/swagger.json
@@ -1,9 +1,162 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is MedicalCare Project api docs.",
+        "title": "MedicalCare API",
+        "contact": {
+            "name": "Anxiu0101",
+            "url": "https://github.com/Anxiu0101/MedicalCare/blob/master/README.md",
+            "email": "anxiu.fyc@foxmail.com"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8000",
+    "basePath": "/api/v1",
     "paths": {
+        "/api/v1/user/info": {
+            "get": {
+                "security": [
+                    {
+                        "x-token": []
+                    }
+                ],
+                "description": "用于用户获取其个人资料",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户相关接口"
+                ],
+                "summary": "用户资料获取接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.UserInfo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "x-token": []
+                    }
+                ],
+                "description": "用于用户更新其个人资料",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户相关接口"
+                ],
+                "summary": "用户资料更新接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "新密码",
+                        "name": "email",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "新密码",
+                        "name": "gender",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "新密码",
+                        "name": "age",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新密码",
+                        "name": "tel",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.UserInfo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/login": {
             "post": {
                 "description": "用于用户登陆，接受用户名和用户密码，将 access token 和 refresh token 作为结果返回，同时返回用户的账户信息",
@@ -37,20 +190,55 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TokenData"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/model.TokenData"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "User": {
+                                                            "$ref": "#/definitions/model.AccountInfo"
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
-                        "description": "输入参数错误"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     },
                     "500": {
-                        "description": "服务错误"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     }
                 }
             }
         },
         "/api/v1/user/password": {
             "post": {
+                "security": [
+                    {
+                        "x-token": []
+                    }
+                ],
                 "description": "用于用户更新密码，需要新密码做为传入的参数，需要 token 验证",
                 "consumes": [
                     "application/json"
@@ -63,6 +251,13 @@
                 ],
                 "summary": "用户重新设置密码接口",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "新密码",
@@ -79,10 +274,16 @@
                         }
                     },
                     "400": {
-                        "description": "输入参数错误"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     },
                     "500": {
-                        "description": "服务错误"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     }
                 }
             }
@@ -124,10 +325,16 @@
                         }
                     },
                     "400": {
-                        "description": "输入参数错误"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     },
                     "500": {
-                        "description": "服务错误"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
                     }
                 }
             }
@@ -201,50 +408,6 @@
                 }
             }
         },
-        "/user/info": {
-            "get": {
-                "description": "get user account info",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Get User Info",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "update user account info",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Update User Info",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/user/online": {
             "get": {
                 "description": "get user is online or not",
@@ -270,6 +433,22 @@
         }
     },
     "definitions": {
+        "model.AccountInfo": {
+            "type": "object",
+            "properties": {
+                "avatars": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "username": {
+                    "type": "string",
+                    "example": "Anxiu"
+                }
+            }
+        },
         "model.Response": {
             "type": "object",
             "properties": {
@@ -295,6 +474,27 @@
                     "type": "string"
                 },
                 "user": {}
+            }
+        },
+        "model.UserInfo": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "example": 20
+                },
+                "email": {
+                    "type": "string",
+                    "example": "email@example.com"
+                },
+                "gender": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "tel": {
+                    "type": "string",
+                    "example": "188-8888-6666"
+                }
             }
         }
     }
